smartbankapp/smartbank-backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: smartbank-backend-deployment
  labels:
    app: smartbank-backend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: smartbank-api-backend
  template:
    metadata:
      labels:
         app: smartbank-api-backend
    spec:
       containers:
        - name: smartbank-backend-container
          image: saravanaprakashbe/smart-bank-app-api:latest
          ports:
            - containerPort: 8080
