smartbankapp/smartbank-frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: smartbank-frontend-deployment
  labels:
    app: smartbank-frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: smartbank-react-frontend
  template:
    metadata:
      labels:
         app: smartbank-react-frontend
    spec:
       containers:
        - name: smartbank-react-frontend-container
          image: saravanaprakashbe/smartbankfrontend:latest
          ports:
            - containerPort: 3000
