smartbankapp/smartbank-backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: smartbank-backend-service
spec:
  ports:
   - port: 190
     targetPort: 8080
  selector:
      app: smartbank-api-backend
