smartbankapp/smartbank-frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: smartbank-frontend-service
spec:
  ports:
   - port: 80
     targetPort: 3000
  selector:
      app: smartbank-react-frontend
